--- a/toolbox-api/package.json
+++ b/toolbox-api/package.json
@@ -7,17 +7,21 @@
   "scripts": {
     "start": "node server.js",
     "dev": "standard --fix && node server.js",
-    "lint": "standard"
+    "lint": "standard",
+    "fix": "standard --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
     "standard": "^16.0.4"
   }
 }
